fix(polytech-lms-api): 인구 통계 행정구역 후보 생성 NPE 수정
- 전국(null) 후보 포함 시 List.copyOf에서 NPE 발생 → unmodifiableList로 변경
- 행정구역 대체 후보 목록 DEBUG 로그 추가
- gradlew test 통과